[package]
name = "geofw-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
geofw-common = { path = "../geofw-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.0.7"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "geofw"
path = "src/main.rs"
